# yahtzee17

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  dice.cpp  dice.h  enumScore.h  game.cpp  game.h  main.cpp  makefile  player.cpp  player.h  scoreSheet.cpp  scoreSheet.h
include/: configs.h  dice.h  enumScore.h  game.h  player.h  scoreSheet.h
src/: CMakeLists.txt  dice.cpp  game.cpp  main.cpp  player.cpp  scoreSheet.cpp
